<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.history.HistoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="Riwayat Perbaikan"
        app:titleTextAppearance="@style/ActionBar" />

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/layout_latest_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/background_rounded"
            android:backgroundTint="@color/gray"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:id="@+id/tv_alber_history_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:text="@string/dummy_date"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:visibility="gone" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_remove_maintenance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="@string/tambah_perbaikan"
                android:textColor="@color/white"
                app:rippleColor="@color/gray"
                app:strokeColor="@color/orange" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_maintenance_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/riwayat_perbaikan"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/layout_latest_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_maintenance_history"
            tools:listitem="@layout/item_row_history" />

        <TextView
            android:id="@+id/tv_empty_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:gravity="center"
            android:text="@string/empty_history"
            android:textColor="@color/darkGray" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/tv_empty_alber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_failed_fetch"
            android:textColor="@color/darkGray"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/reload"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>