<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_24sdp"
    tools:context=".ui.screens.landing.LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WELCOME"
            android:textColor="@color/orange"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/tractor_icon" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_text_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:text="@string/login"
            android:textAllCaps="true"
            app:rippleColor="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/orange"
            app:rippleColor="@color/gray"
            app:strokeColor="@color/orange" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>